--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -135,7 +135,7 @@
 
 .wrapper {
     display: flex;
-    overflow-x: hidden;
+    overflow: hidden;
     flex-direction: column;
     padding: 0px 5%;
     align-items: center;
